--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Angular Test</title>
   </head>
   <body>
-    <h1>Hello there! I'm an example</h1>
+    <h1>Hello there! I'm an example.</h1>
   </body>
 </html>
